--- a/examples/lights/index.html
+++ b/examples/lights/index.html
@@ -40,10 +40,13 @@
 
 
       tangram-terrain="
-        style: #yaml-austria;
-        center: 12.6875, 47.188056;
+        style: #yaml-esri;
+        centerAut: 12.6875, 47.188056;
+        center: 14.995, 37.755;
+        centerHelens:  -122.1944,46.1912;
+        heightmapFactor: 2;
         zoom: 14;
-        pxToWorldRatio: 80;
+        pxToWorldRatio: 90;
         lodCount: 4;
         lod: 1;
       " 
