add displacement map download

--- a/examples/lights/index.html
+++ b/examples/lights/index.html
@@ -42,13 +42,14 @@
       tangram-terrain="
         style: #yaml-esri;
         centerAut: 12.6875, 47.188056;
-        center: 14.995, 37.755;
-        centerHelens:  -122.1944,46.1912;
+        centerEtna: 14.995, 37.755;
+        center:  -122.1944,46.1912;
         heightmapFactor: 2;
         zoom: 14;
         pxToWorldRatio: 90;
         lodCount: 4;
         lod: 1;
+        vertexNormals: false;
       " 
 
       rotation="-90 0 0"
