setting frustum culled on mesh

--- a/examples/lights/index.html
+++ b/examples/lights/index.html
@@ -43,13 +43,16 @@
         style: #yaml-esri;
         centerAut: 12.6875, 47.188056;
         centerEtna: 14.995, 37.755;
-        center:  -122.1944,46.1912;
+        centerVesuv:  14.433333, 40.816667;
+        centerHelens:  -122.1944,46.1912;
+        centerKea:   -155.468066, 19.820664;
+        center:   -155.468066, 19.820664;
         heightmapFactor: 2;
-        zoom: 14;
+        zoom: 17;
         pxToWorldRatio: 90;
         lodCount: 4;
         lod: 1;
-        vertexNormals: false;
+        vertexNormals: true;
       " 
 
       rotation="-90 0 0"
