fixing dist build

--- a/examples/lights/index.html
+++ b/examples/lights/index.html
@@ -46,13 +46,15 @@
         centerVesuv:  14.433333, 40.816667;
         centerHelens:  -122.1944,46.1912;
         centerKea:   -155.468066, 19.820664;
-        center:   -155.468066, 19.820664;
+        centerKea:   -155.468066, 19.820664;
+        centerPiton: 55.7078624, -21.2424846;
+        center: 55.7078624, -21.2424846;
         heightmapFactor: 2;
-        zoom: 17;
-        pxToWorldRatio: 90;
+        zoom: 15;
+        pxToWorldRatio: 100;
         lodCount: 4;
         lod: 1;
-        vertexNormals: true;
+        vertexNormals: false;
       " 
 
       rotation="-90 0 0"
