update for aframe 0.9

--- a/examples/lod/index.html
+++ b/examples/lod/index.html
@@ -21,7 +21,7 @@
       geometry="primitive: plane; buffer: true; 
         width: 20; height: 20; 
         segmentsWidth: 80; segmentsHeight: 80;"
-      material="wireframe: false; displacementScale: 30;"
+      material="wireframe: false; displacementScale: 30; displacementBias: -30"
 
 
       tangram-terrain="
@@ -29,14 +29,14 @@
         center: 12.6875, 47.188056;
         zoom: 13;
         pxToWorldRatio: 80;
-        lodCount: 1;
+        lodCount: 4;
         lod: 1
       " 
 
       lod-controls
 
       rotation="-90 0 0"
-      position="0 -20 -10"
+      position="0 3 -1"
       >
 
       <!--
