--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -30,7 +30,7 @@
 
       tangram-static-terrain="
         map: #map;
-        normalmap: #normalmap;
+        normalMap: #normalmap;
         bounds: 12.61882781982422,47.14139472293294,12.756156921386719,47.23472275076704;
         pxToWorldRatio: 80;
         lodCount: 4;
