--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -4,10 +4,12 @@
   <title>A-Frame Tangram Terrain Component - Heightmap</title>
   <meta name="description" content="Heightmap example for Tangram component."></meta>
 
-  <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+  <!--<script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>-->
+  <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@b0229d33ba176f2567003d49fca5d2b9049fbcab/dist/aframe-master.min.js"></script>
+
   <script src="../../dist/aframe-tangram-terrain-component.min.js"></script>
   <script src="./sphere-matrix.js"></script>
-  <script src="https://unpkg.com/aframe-animation-component/dist/aframe-animation-component.min.js"></script>
+  <!--<script src="https://unpkg.com/aframe-animation-component/dist/aframe-animation-component.min.js"></script>-->
 </head>
 
 <body>
