--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>A-Frame Tangram Terrain Component - LOD</title>
+    <title>A-Frame Tangram Terrain Component - Static</title>
     <meta name="description" content="Static example for Tangram component."></meta>
-    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script src="../../dist/aframe-tangram-terrain-component.min.js"></script>
     <script src="./sphere-matrix.js"></script>
   </head>
